<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivRegister"
        android:layout_marginTop="0dp"
        android:src="@drawable/undraw_teacher_35j2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegister"
        android:layout_marginTop="0dp"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivRegister"
        app:layout_constraintStart_toStartOf="@+id/ivRegister"
        app:layout_constraintTop_toBottomOf="@+id/ivRegister"/>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconTint="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="0dp"
            app:passwordToggleEnabled="true"
            app:startIconTint="@android:color/holo_blue_dark"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            app:startIconTint="@android:color/holo_blue_dark"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="0dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="example@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etTanggalLahir"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            app:startIconTint="@android:color/holo_blue_dark"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="0dp"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tanggal Lahir" />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_height="50dp"
            android:layout_marginLeft="90dp"
            android:id="@+id/btnDatePicker"
            android:layout_width="200dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24"
            android:layout_weight="1"
            android:text="Date Pick"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNomorTelepon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            app:startIconTint="@android:color/holo_blue_dark"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="0dp"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nomor Telepon" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayout"
        app:layout_constraintStart_toStartOf="@+id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Clear Field" />

        <com.google.android.material.button.MaterialButton
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:layout_width="90dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_weight="1"
            android:text="REGISTER"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>